# phenofusion

./: .gitignore  .pre-commit-config.yaml  BET_FIX_EXPLANATION.md  GRA_metrics_4221936.err  README.md  SHR_metrics_4125173.err  SHR_metrics_4171234.err  SHR_metrics_4215842.err  pyproject.toml  requirements-dev.txt
bashscripts/: TFT_process.sh  agg_pred_check.sh  agg_pred_check_2020.sh  agg_pred_check_5020.sh  analysis.sh  drivermap.sh  drivermap_BDT.sh  drivermap_BET.sh  drivermap_NDT.sh  drivermap_NET.sh  drivermap_get_data.sh  drivers_BDT_2020.sh  drivers_BDT_2060.sh  drivers_BDT_5020.sh  drivers_BDT_5090.sh  drivers_BET.sh  drivers_GRA.sh  drivers_NDT.sh  drivers_NET.sh  drivers_SHR.sh  metrics_GRA.sh  metrics_SHR.sh  predict_2020.sh  predict_2060.sh  predict_5020.sh  predict_5090.sh  predict_BET.sh  predict_GRA.sh  predict_NDT.sh  predict_NET.sh  predict_SHR.sh  predict_march31st.sh  process_BDT_2020.sh  process_BDT_2060.sh  process_BDT_5020.sh  process_BDT_5090.sh  process_BET.sh  process_GRA.sh  process_NDT.sh  process_NET.sh  (+7 more)
ci/: workflow.yml
docs/: REFACTORING_SUMMARY.md  heatmap_analysis.md
examples/: examples_heatmap_analysis.py
notebooks/: driversdata_diagnostics.ipynb
src/phenofusion/analysis/: README.md  config.py  drivers_map_dec.py  generate_driver_maps.py  generate_sensitivity_plots.py  heatmap_analysis.py  metrics_tft.py  run_driver_maps.py  run_heatmap_analysis.py  run_sensitivity_analysis.py  sensitivity_plot.py  test_driver_maps.py  test_sensitivity_analysis.py
tests/: test_heatmap_analysis.py  test_metrics_tft_refactored.py
(+12 files in other folders)
